Re VIV-104: Fix styling of nofollow checkbox
Unfortunately this CSS issue is not visible on Linux, only on Mac

--- a/core/src/zeit/content/article/edit/browser/resources/editor.css
+++ b/core/src/zeit/content/article/edit/browser/resources/editor.css
@@ -689,7 +689,7 @@
   z-index: 1000;
 }
 
-.type-article .link_input input {
+.type-article .link_input input[type="text"] {
   margin-bottom: 10px;
   width: 100%;
 }
